--- a/index.css
+++ b/index.css
@@ -65,9 +65,8 @@ img {
   border: 1px solid white;
   padding: 30px;
   margin: 55px;
-  background-size:cover;
-  background-repeat:no-repeat;
-  background: url(file:///C:/Users/admin/Desktop/UI/index.html/css-background-image-size-fit-full-screen.jpg) no-repeat;
+  resize: both;
+  overflow: auto;
 }
 #app10 {
     padding-bottom: 130px;
