--- a/index.css
+++ b/index.css
@@ -11,11 +11,11 @@ input {
 button {
     width: 80px;
     height: 35px;
-    background-color:lightblue;
+    background-color:#21cfcb;
     margin-top: 15px;
 }
 ul {
-    margin-left:150px;
+    margin-left:250px;
     
 }
 li {
@@ -23,7 +23,7 @@ li {
 }
 #app{
  margin-left: 70px;
-    font-size: 80px;
+    font-size: 60px;
     font-family: Garamond;
 }
 #app1 {
@@ -43,32 +43,22 @@ img {
 }
 #app5 {
     margin-top: 350px;
-    font-size: 80px;
+    font-size: 60px;
     font-family: Garamond;
     margin-left: 70px;   
 }
 #app6 {
-    margin-left: 100px;
-    margin-right: 0px;
-    padding-left: 40px;
+    margin-left: 65px;
+    margin-right: 30px;
+    padding-left: 50px;
 }
 #app7 {
     padding-top: 50px;
-    
-    
+    margin-left: 120px;
 }
 #app9 {
     padding-bottom: 80px;    
-}
-#box {
-   
-  border: 1px solid black;
-  padding: 20px;
-  margin: 50px;
-  resize: both;
-  overflow: auto;
-  width: 100%;
-  height: 1000%;
+    margin-left: 120px;
 }
 #app10 {
     padding-bottom: 130px;
@@ -83,3 +73,9 @@ form1 {
 #app12  {
     margin-top: 60px;
 }
+@media only screen and (max-width: 600px) {
+    #box {
+      background-color: lightblue;
+    }
+  }
+  
