--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ img {
     margin-left: 70px;   
 }
 #app6 {
-    margin-left: 65px;
+    margin-left: 60px;
     margin-right: 30px;
     padding-left: 50px;
 }
@@ -73,10 +73,23 @@ form1 {
 #app12  {
     margin-top: 60px;
 }
-@media only screen and (max-width: 600px) {
-    #box {
-        width:100%;
-        height:100%;    
-    }
+#box {
+    resize:both;
+    overflow: auto;
+}
+.left, .right {
+    float: left;
+    width: 20%; /* The width is 20%, by default */
   }
   
+  .main {
+    float: left;
+    width: 60%; /* The width is 60%, by default */
+  }
+  
+  /* Use a media query to add a breakpoint at 800px: */
+  @media screen and (max-width: 800px) {
+    .left, .main, .right {
+      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+  }
