--- a/index.css
+++ b/index.css
@@ -13,9 +13,12 @@ button {
     height: 35px;
     background-color:#21cfcb;
     margin-top: 15px;
+    color: white;
+    border-radius: 3px;
+    border: none;
 }
 ul {
-    margin-left:250px;
+    margin-left:200px;
     
 }
 li {
@@ -35,7 +38,7 @@ li {
 }
 #app3 {
     height: 50px;
-    width: 100px;
+    width: 130px;
 }
 img {
     margin-right:100px;
@@ -48,17 +51,9 @@ img {
     margin-left: 70px;   
 }
 #app6 {
-    margin-left: 60px;
-    margin-right: 30px;
-    padding-left: 50px;
-}
-#app7 {
-    padding-top: 50px;
-    margin-left: 120px;
-}
-#app9 {
-    padding-bottom: 80px;    
-    margin-left: 120px;
+    margin-left: 50px;
+    padding-left: 20px;
+   text-align: center;
 }
 #app10 {
     padding-bottom: 130px;
@@ -77,19 +72,3 @@ form1 {
     resize:both;
     overflow: auto;
 }
-.left, .right {
-    float: left;
-    width: 20%; /* The width is 20%, by default */
-  }
-  
-  .main {
-    float: left;
-    width: 60%; /* The width is 60%, by default */
-  }
-  
-  /* Use a media query to add a breakpoint at 800px: */
-  @media screen and (max-width: 800px) {
-    .left, .main, .right {
-      width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
-    }
-  }
